# HRNet-Semantic-Segmentation

./: .gitignore  CMakeLists.txt  README.md  colorMap.txt  compressMap.txt  compressMap_c15.txt  data_config.h.in  docker.txt  requirements.txt
data/synthetic/: list.txt  test_list.txt  train_list.txt
experiments/lip/: simple.yaml
experiments/panorama/: hrnet_ocr_train.yaml  ocr_train.yaml  small_v2_train.yaml  train.yaml  train_v2.yaml
experiments/synthetic/: test.yaml  train.yaml
ground_tex/: tex_list.txt
lib/config/: default.py
lib/core/: criterion.py  function.py
lib/datasets/: __init__.py  base_dataset.py  panorama.py  synthetic.py
lib/models/: seg_hrnet_ocr.py
lib/utils/: inference.py  utils.py
src/Pano2Image/: CMakeLists.txt  Pano2Image.cpp
src/ReadPanorama/: CMakeLists.txt  ReadPanorama.cpp
src/TestShader/: CMakeLists.txt  TestShader.cpp
src/common/: Panorama.h
tools/: EXE.bat  Pano2Image.bat  analysisData.py  analysisOpticalFlow.py  analysisResult.py  analysisVideo.py  batch_analysisVideo.py  colormap.py  colormap_normal_image.py  convert_L2RGB.py  convert_RGB2L.py  dataset_vis.py  deploy.py  generate_list.py  image2training.py  list_panoramas.py  pano2image.py  pipeline.py  pipeline_release.py  preprocessPanorama.py  script.txt  train.py  windows_train.py
